recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(levels0){
    var newLength = length/2
    var nL = level-1		// newLevel
    
     
     sierpinski(nL,newLength)
     right(120.0)
     sierpinski(nL,newLength)
     right(120.0)
     
     avance(length)
    
    
  }else if(level==0){
    avance(length)
  }
}